// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The "Create Caregiver Account" is disabled until the checkbox to accept the nopp,terms is selected 1`] = `
<button
  class="button btn btn-secondary disabled"
  disabled=""
  type="submit"
>
  Create Caregiver Account
</button>
`;

exports[`The "Create Caregiver Account" is disabled until the checkbox to accept the nopp,terms is selected 2`] = `
<button
  class="button btn btn-secondary"
  type="submit"
>
  Create Caregiver Account
</button>
`;

exports[`email format must be validated and errors displayed when email input field has lost focus 1`] = `
<div
  class="textError"
>
  Please enter a valid email address.
</div>
`;

exports[`password validation for 1st password entry box is done after user finished typing 1`] = `
<div
  class="textError"
>
  Password must be at least 8 characters long and contain at least one character, one number and one special characters including !@#$%*=
</div>
`;

exports[`password validation for 2nd password entry box must be done as user is typing 1`] = `
<div
  class="textError"
>
  Your passwords do not match, try again.
</div>
`;

exports[`register API returns 409 Conflict, display error and link to Login page 1`] = `
<div
  class="textError"
>
  This email address is already registered.
  <br />
  Click below to Login.
</div>
`;

exports[`renders correctly 1`] = `
<div
  class="container-fluid"
>
  <div
    class="content container"
  >
    <div
      class="heading2"
    >
      Let's get you set up with a caregiver account .
    </div>
    <div
      class="formWrapper"
    >
      <form
        class=""
      >
        <span>
          <div
            class="row"
          >
            <div
              class="col-12 col-sm-6"
            >
              <input
                class="inputText"
                name="firstName"
                placeholder="First Name"
                type="text"
                value=""
              />
            </div>
            <div
              class="col-12 col-sm-6"
            >
              <input
                class="inputText"
                name="lastName"
                placeholder="Last Name"
                type="text"
                value=""
              />
            </div>
          </div>
        </span>
        <div>
          <input
            class="inputText"
            name="email"
            placeholder="email"
            type="email"
            value=""
          />
        </div>
        <div
          class="passwordwrapper"
        >
          <input
            autocomplete="new-password"
            class="passwordText"
            ispassword="true"
            name="password"
            placeholder="password"
            type="text"
            value=""
          />
          <button
            class="showHideButton btn btn-secondary"
            type="button"
          >
            Hide 
          </button>
        </div>
        <div
          class="passwordwrapper"
        >
          <input
            class="passwordText"
            ispassword="true"
            name="rePassword"
            placeholder="re-enter password"
            type="text"
            value=""
          />
          <button
            class="showHideButton btn btn-secondary"
            type="button"
          >
            Hide 
          </button>
        </div>
        <div
          class="formHint"
        >
          <div>
            Password must:
            <ul>
              <li>
                - 8 characters
              </li>
              <li>
                - One uppercase letter
              </li>
              <li>
                - One lowercase letter
              </li>
              <li>
                - One number
              </li>
              <li>
                - One special character !@#$%^&*=
              </li>
            </ul>
          </div>
        </div>
        <div
          class="checkboxWrapper row"
        >
          <div
            class="formLabel col-12 col-md-12"
          >
            <label
              class="checkboxContainer"
            >
              <input
                id="chkCertifyCaregiverRegister"
                type="checkbox"
                value=""
              />
              <span
                class="checkbox"
              />
            </label>
                     I certify that all info I provide is correct and I have read and agree to the  
            <span
              class="noppCheckBoxWrapper"
            >
              <span
                id="policies-button"
              >
                Notice of Privacy Practices, Terms of Service, End User License Agreement and Access to Another Adult's Online Medical Record
              </span>
            </span>
          </div>
        </div>
        <div>
          <button
            class="button btn btn-secondary disabled"
            disabled=""
            id="btnCreateCaregiver"
            type="submit"
          >
            Create Caregiver Account
          </button>
        </div>
      </form>
    </div>
  </div>
  <div
    class="footerWrapper container"
  >
    <div>
      <div
        class="wrapper"
      >
        <div
          class="stepActive"
        >
          Account
          <br />
          Setup
          <div
            class="stepNumberActive"
          >
            1
          </div>
        </div>
        <div
          class="step"
        >
          Medication
          <br />
          Review
          <div
            class="stepNumber"
          >
            2
          </div>
        </div>
        <div
          class="step"
        >
          Additional 
          <br />
          Medications
          <div
            class="stepNumber"
          >
            3
          </div>
        </div>
        <div
          class="step"
        >
          Health
          <br />
          Updates
          <div
            class="stepNumber"
          >
            4
          </div>
        </div>
        <div
          class="step"
        >
          Set
          <br />
          Appointment
          <div
            class="stepNumber"
          >
            5
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`validate firstName 1`] = `
<div
  class="textError"
>
  Please enter your first name.
</div>
`;

exports[`validate lastName 1`] = `
<div
  class="textError"
>
  Please enter your last name.
</div>
`;
